--- a/pms.app.tests/pms.app.tests.csproj
+++ b/pms.app.tests/pms.app.tests.csproj
@@ -25,4 +25,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="TestResults\" />
+  </ItemGroup>
+
 </Project>
